Add GitHub Pages configuration and deployment workflow

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
             "prerender": true,
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "baseHref": "/recipe-app/"
           },
           "configurations": {
             "production": {
@@ -88,10 +89,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
