--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,12 +42,12 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Create .nojekyll file
-        run: touch docs/.nojekyll
+        run: touch dist/recipe-app/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs'
+          path: './dist/recipe-app'
 
       - name: Deploy to GitHub Pages
         id: deployment
