Fix base href and simplify index.html for local and GitHub Pages deployment

--- a/angular.json
+++ b/angular.json
@@ -33,13 +33,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "src/server.ts"
-            },
-            "baseHref": "/recipe-app/"
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -55,12 +49,14 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/recipe-app/"
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "baseHref": "/"
             }
           },
           "defaultConfiguration": "production"
